# FloatyBoaty

./: .gitignore  CMakeLists.txt  README.md  build.sh
map_editor/: CMakeLists.txt
map_editor/include/: map_editor.hpp
map_editor/src/: map_editor.cpp
simulator/: CMakeLists.txt
simulator/include/: robot.hpp  simulator.hpp
simulator/src/: main.cpp  robot.cpp  simulator.cpp
simulator/templates/: robot.yaml  track.yaml
visualizer/: CMakeLists.txt
visualizer/include/: util.hpp  visualizer.hpp
visualizer/src/: visualizer.cpp
visualizer/test/: ManualTest.cpp
